Fix chrome specific scrollbar overflows

--- a/client/src/components/ListingsSidebar/ListingsSidebar.css
+++ b/client/src/components/ListingsSidebar/ListingsSidebar.css
@@ -10,7 +10,7 @@
     height:calc(100vh - 70px);
     transition:transform .5s ease;
     display:flex;
-    overflow:scroll
+    overflow:auto
     }
     
     .condition-select {
@@ -86,25 +86,6 @@
     transition:filter .3s
     }
     
-    .toggle-sidebar {
-    position:relative;
-    transform:translate(-5em,100%) rotate(180deg);
-    width:3em;
-    height:3em;
-    border-radius:3em;
-    border:none;
-    font-size:14px;
-    box-shadow:var(--box-shadow-small);
-    background-color:var(--button-background);
-    background-image:url(../../assets/images/next-icon.png);
-    background-size:1.5em;
-    background-position:center;
-    background-repeat:no-repeat;
-    border-radius:50%;
-    flex-shrink:0;
-    transition-duration:.5s
-    }
-    
     .filters-form {
     margin:1.5em 0;
     display:flex;
@@ -118,14 +99,5 @@
     transform:translateX(-100%);
     transition:transform .5s ease
     }
-    
-    .toggle-sidebar:not(.true) {
-    transform:translate(24em,100%) rotate(0deg);
-    transition-duration:.8s
-    }
-    
-    .toggle-sidebar {
-    transform:translate(24em,100%) rotate(180deg);
-    transition-duration:.8s
-    }
+
     }
